[package]
name = "network"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["echo", "echo-client", "udp-echo", "udp-echo-client", "boardcast", "ipaddr", "simple_dns", "nslookup"]

[[bin]]
name = "echo-server"
path = "echo/src/main.rs"

[[bin]]
name = "echo-client"
path = "echo-client/src/main.rs"

[[bin]]
name = "udp-echo-server"
path = "udp-echo/src/main.rs"

[[bin]]
name = "udp-echo-client"
path = "udp-echo-client/src/main.rs"

[[bin]]
name = "boardcast"
path = "boardcast/src/main.rs"

[[bin]]
name = "ipaddr"
path = "ipaddr/src/main.rs"

[[bin]]
name = "simple_dns"
path = "simple_dns/src/main.rs"

[[bin]]
name = "nslookup"
path = "nslookup/src/main.rs"

[dependencies]
dns-lookup = "1.0.1"